--- a/torcs/torcs/doc/paper/torcs.tex
+++ b/torcs/torcs/doc/paper/torcs.tex
@@ -26,8 +26,8 @@ In TORCS, the participating players are referred to as ``robots''. They are load
 
 Before every race, each robot can gather and process information about the track's geometry and surfaces. It is up to the user to decide how much information of this to use. This is an opportunity to calculate a reasonable initial racing line for the track, perform a suitable set-up for the cars and decide upon a team and pit strategy.
 
-The robots have the opportunity to interact with the simulation every $0.02s$. The default interface is through a low-level API,
-(implemented via \texttt{raceman.h}) which can provide detailed information about the race status to the robot, exact position, distance from the edge of the track, the position of other cars, etc. However, even if all this, there are many parts of the simulation state to which the robots have no direct access. Consequently, even the basic driving problem is \emph{partially observable.}
+The robots have the opportunity to interact with the simulation every $0.02s$. The default interface is through a low-level API\footnote{
+{A thorough description of the API can be found at \url{http://www.berniw.org/aboutme/publications/api-1.3.6.tar.bz2}} for the current version.} which can provide detailed information about the race status to the robot, exact position, distance from the edge of the track, the position of other cars, etc. However, even if all this, there are many parts of the simulation state to which the robots have no direct access. Consequently, even the basic driving problem is \emph{partially observable.}
 
 Robots may also use a calculated three-dimensional projection, instead of the low-level API. This is intended to be used for researchers that have an interest in visual processing. However, the overall problem then becomes much harder as there is significantly less information directly available. 
 
@@ -55,7 +55,7 @@ However, TORCS has found other uses, beyond AI research. For example, it has bee
 TORCS continues to evolve, and we feel that it has a lot more to offer to both hobbyists and the academic research community. However, one of our main goals is to maintain a stable API so as to avoid disruption for its many users. Finally, the modular architecture of TORCS and open source licensing allows it to continue to live long after its original creators and current maintainers have moved on. 
 
 \section*{Acknowledgements}
-Many things to the past project participants and developers, without whose efforts the project would not have finished. These include R\'emi Coulom.
+Many things to the past project participants and developers, without whose efforts the project would not have been possible. These include Charalambos Alexopoulos, R\'emi Coulom, \ldots [NOTE: Add whomever else].
 
 \bibliographystyle{plain}
 \bibliography{torcs}
