--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -252,6 +252,10 @@ Changes since 1.3.6
   L2/R2 of playstation controllers. Add in the drivers section of
   preferences.xml e.g. <attstr name="blacklisted events" val="BTN7-0,BTN8-0"/>
   (Bernhard).
+- Improved wheel velocity calculation (Bernhard).
+- Improved suspension code to catch damping spikes in extreme conditions and
+  setups, for TRB (Wolf-Dieter, Bernhard).
+- Added comments in susp.cpp (Bernhard).
 
 12. TODO/Notes
 --------------
