--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -249,41 +249,79 @@ Changes since 1.3.6
 - Added a testsuite to generate a bulk of tracks ("test" directory) (Bernhard).
 - Added blacklisting of button events in player perferences, needed to set up
   input devices which fire button and axis events on analogue buttons, e.g.
-  L2/R2 of playstation controllers. Add in the drivers section of
+  L2/R2 of playstation 4 controllers. Add in the drivers section of
   preferences.xml e.g. <attstr name="blacklisted events" val="BTN7-0,BTN8-0"/>
   (Bernhard).
 - Improved wheel velocity calculation (Bernhard).
 - Improved suspension code to catch damping spikes in extreme conditions and
   setups, for TRB (Wolf-Dieter, Bernhard).
 - Added comments in susp.cpp (Bernhard).
+- Ensure that the third element just produces positive forces (Wolf-Dieter,
+  Bernhard).
 
 12. TODO/Notes
 --------------
 
-
-TODO for 1.3.7/x
-----------------
-- Curb sound
+TODO for 1.3.8 "worn & blown"
+--------------
 - Z-Collision
+- Eventually Z calculation
+- Caster
+- Threshold and caster adjustable- Dynamic track
+- Wind/Temp
+- Tire Wear/Temp
+- Curb sound
+- Brake balance adjustable during ride
+- Eventually differential(s) adjustable during ride
+
+TODO for 1.3.9 "analysed"
+--------------
+- Data recorder ("Telemetry")
+- Data analyser (high/low-pass filtering, comparison, etc.)
+- Speed/Shock
+- Replay?
+
+TODO for 1.3.10 "ruled"
+---------------
+- Rules
+- Timed races (e.g. 24h).
+- Rules/Modes which do not requrie 1.4 changes
+
+TODO for 1.3.11 "tutored"
+---------------
+- Starting/race modes (multi-class for TRB?)
+- VS update
+- Robot Tutorial update
+
+TODO for 1.3.12 "managed"
+---------------
+- Document race manager XML
+- Expose secret settings in GUI (e.g. Button masking)
+
+TODO for 1.3.13 or 1.4.x "artistic"
+------------------------
+- Ingame track generation wizard (themed)
+- Ingame car livery design (themed)
+
+TODO for 1.3.14 or 1.4.x "everywhere"
+------------------------
 - Merge simuv3 parts into simuv2
 - Review and eventually apply mac os x build
 - Review MorphOS changes
 - Review WD's ABS suggestion, apply.
 - Review WD's 4WD analysis/patch.
 
-eventually (otherwise in 1.4.x or later):
-- track wall properties
-- Solve problems with side entering/exiting pit lane rules (repeated violations give
-  only one penalty under some conditions).
-- Rules/Modes which do not requrie 1.4 changes
-- Telemetry
-- Timed races (e.g. 24h).
+TODO for 1.3.15+
+----------------
+- Maintainance only, move development to 1.4
+- Compiler and library adoptions, fixes, compatible content updates
 
 
 TODO for 1.4.x
 --------------
 - Robot interface adoptions (maybe askfeatures, callonce, grid, postprocess, we will see...)
 - More Rules.
+- Brake/Engine Wear (with cooling)
 - Apply SDL patch from Brian Gavin but moving directly to SDL 2.0.
 - Update OpenAL to 1.1, fix use of deprecated stuff.
 - Car asignment for human players.
@@ -300,6 +338,9 @@ TODO for 1.4.x
 - Review/reduce dynamic memory allocation/release during rendering
 - Store all graphics engine state in a context struct/object (to be able to render telemetry
   in the car setup screen or during a running session)
+- track wall properties
+- Solve problems with side entering/exiting pit lane rules (repeated violations give
+  only one penalty under some conditions).
 
 TODO TRB
 --------
