--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -214,50 +214,10 @@ Some additional notes:
 11. Changes
 -----------
 
-Changes since 1.3.6
+Changes since 1.3.7
 -------------------
-- Added missing pictures for Doxygen generated documentation (Bernhard).
-- Fixed all Doxygen (version 1.8.2) warnings (Bernhard).
-- Adjusted Doxygen configuration (Bernhard).
-- Added architecture overview to documentation (Bernhard).
-- Updated documentation in params.cpp (Bernhard).
-- Improved some currently unused functions in params.cpp (Bernhard).
-- params.cpp cleanup (Bernhard).
-- Restructured/improved robottools documentation (Bernhard).
-- Improved documentation of interfaces (track, graphic, robot, simu) (Bernhard).
-- Improved pointer checking in RmLoadingScreenSetText (Bernhard).
-- Improved race manager API documentation (Bernhard).
-- Added RmGetCategoryName to race manager API, as the name suggests (Bernhard).
-- Removed obsolete file confscreens.h (Bernhard).
-- Enabled documentation client side (Javascript) search engine (Bernhard).
-- Improved ReApplyRaceTimePenalties for cases where drivers did not complete a
-  single lap or the car has been wrecked (Bernhard).
-- Removed some outdated files from human driver (Bernhard).
-- TORCS configuration and result files go now to correct place on Windows,
-  e.g. to AppData/Local/torcs on Windows 7 (Bernhard).
-- Result saving creates directory if not available, matters when creating
-  custom racemanagers or running custom batches with -r (Bernhard).
-- Improved -r on Windows, paths containing backslashes ('\') are now working
-  (Bernhard). 
-- Added ShFolder.lib to VS 6 project files (required for SHGetFolderPath).
-  For VS 6 builds you will need to install the Windows Server 2003 February
-  Edtion CORE SDK (the last one which worked with VS 6) and set the lib
-  and include path in the VS 6 options (Bernhard).
-- Fixed some gcc 4.8.1 warnings (Bernhard).
-- Disabled penalties after race finish, reported by MarkP (MarkP, Bernhard).
-- Added new options to trackgen for testing, see -i, -o (Bernhard).
-- Added a testsuite to generate a bulk of tracks ("test" directory) (Bernhard).
-- Added blacklisting of button events in player perferences, needed to set up
-  input devices which fire button and axis events on analogue buttons, e.g.
-  L2/R2 of playstation 4 controllers. Add in the drivers section of
-  preferences.xml e.g. <attstr name="blacklisted events" val="BTN7-0,BTN8-0"/>
-  (Bernhard).
-- Improved wheel velocity calculation (Bernhard).
-- Improved suspension code to catch damping spikes in extreme conditions and
-  setups, for TRB (Wolf-Dieter, Bernhard).
-- Added comments in susp.cpp (Bernhard).
-- Ensure that the third element just produces positive forces (Wolf-Dieter,
-  Bernhard).
+
+
 
 12. TODO/Notes
 --------------
@@ -273,6 +233,8 @@ TODO for 1.3.8 "worn & blown"
 - Curb sound
 - Brake balance adjustable during ride
 - Eventually differential(s) adjustable during ride
+- Remove circular dependency (raceman.h, simu.h).
+- Remove sound property calculation in wheel.cpp.
 
 TODO for 1.3.9 "analysed"
 --------------
