--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -219,13 +219,15 @@ Changes since 1.3.7
 - Added isnan check in collision response calculation (type and dimension transformation
   could potentially lead to a normal with length 0) (Wolf-Dieter, Daniel, Bernhard).
 - Z collisions reworked (car-road) (Bernhard).
+- Improved rideheight calculation (Bernhard).
+- Fixed tiny position offset when rendering car on strong banking (Bernhard).
+- Adjusted parameters and shadow of car1-ow1 (Wolf-Dieter, Bernhard).
 
 12. TODO/Notes
 --------------
 
 TODO for 1.3.8 "worn & blown"
 --------------
-- Eventually Z calculation
 - Caster
 - Threshold and caster adjustable
 - Dynamic track
