--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -219,8 +219,9 @@ Changes since 1.3.7
 - Added isnan check in collision response calculation (type and dimension transformation
   could potentially lead to a normal with length 0) (Wolf-Dieter, Daniel, Bernhard).
 - Z collisions reworked (car-road) (Bernhard).
+- Improved wheel position calculation (Bernhard).
 - Improved rideheight calculation (Bernhard).
-- Fixed tiny position offset when rendering car on strong banking (Bernhard).
+- Fixed tiny graphical position offset when rendering car on strong banking (Bernhard).
 - Adjusted parameters and shadow of car1-ow1 (Wolf-Dieter, Bernhard).
 
 12. TODO/Notes
