--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -223,14 +223,15 @@ Changes since 1.3.7
 - Improved rideheight calculation (Bernhard).
 - Fixed tiny graphical position offset when rendering car on strong banking (Bernhard).
 - Adjusted parameters and shadow of car1-ow1 (Wolf-Dieter, Bernhard).
+- Implemented caster, adjustable via setup structure and screen (Bernhard).
+- Suspension slow/fast threshold is adjustable too (Bernhard).
+
 
 12. TODO/Notes
 --------------
 
 TODO for 1.3.8 "worn & blown"
 --------------
-- Caster
-- Threshold and caster adjustable
 - Dynamic track
 - Wind/Temp
 - Tire Wear/Temp
