--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -226,6 +226,7 @@ Changes since 1.3.7
 - Implemented caster, adjustable via setup structure and screen (Bernhard).
 - Suspension slow/fast threshold is adjustable too (Bernhard).
 - Changed 2.5D calculations to 3D (Bernhard).
+- Fixed calculation of the angle of attack for spoilers (Bernhard).
 
 
 12. TODO/Notes
