--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -227,7 +227,12 @@ Changes since 1.3.7
 - Suspension slow/fast threshold is adjustable too (Bernhard).
 - Changed 2.5D calculations to 3D (Bernhard).
 - Fixed calculation of the angle of attack for spoilers (Bernhard).
-- Added initial tire temperature model (Bernhard).
+- Added initial tire temperature/wear model (Bernhard).
+- Made tire temperature/wear model data available for robots (Bernhard).
+- Added tire temperature/wear temperature model data to dashboard (Bernhard).
+- Added tire temperature/wear configuration parameter, "tire factor", see practise.xml as
+  example. If the factor is 0, the temperature/wheel model gets disabled (Bernhard).
+- Just enable tire temperature/wear in pro mode (Bernhard).
 
 
 12. TODO/Notes
@@ -237,7 +242,6 @@ TODO for 1.3.8 "worn & blown"
 --------------
 - Dynamic track
 - Wind/Temp
-- Tire Wear/Temp
 - Curb sound
 - Brake balance adjustable during ride
 - Eventually differential(s) adjustable during ride
