--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -224,15 +224,16 @@ Changes since 1.3.7
 - Fixed tiny graphical position offset when rendering car on strong banking (Bernhard).
 - Adjusted parameters and shadow of car1-ow1 (Wolf-Dieter, Bernhard).
 - Implemented caster, adjustable via setup structure and screen (Bernhard).
-- Suspension slow/fast threshold is adjustable too (Bernhard).
+- Suspension slow/fast threshold is now adjustable (Bernhard).
 - Changed 2.5D calculations to 3D (Bernhard).
 - Fixed calculation of the angle of attack for spoilers (Bernhard).
 - Added initial tire temperature/wear model (Bernhard).
 - Made tire temperature/wear model data available for robots (Bernhard).
 - Added tire temperature/wear temperature model data to dashboard (Bernhard).
-- Added tire temperature/wear configuration parameter, "tire factor", see practise.xml as
+- Added tire temperature/wear configuration parameter, "tire factor", see practice.xml as
   example. If the factor is 0, the temperature/wheel model gets disabled (Bernhard).
 - Just enable tire temperature/wear in pro mode (Bernhard).
+- Added new track created by Andrew Sumner, Hidden Valley (Andrew, Bernhard).
 
 
 12. TODO/Notes
