--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -236,7 +236,10 @@ Changes since 1.3.7
 - Added new track created by Andrew Sumner, Hidden Valley (Andrew, Bernhard).
 - Added field to tPitCmd struct to control tire change (Bernhard).
 - Updated pit stop screen to change tires or leave it on (Bernhard).
-- Performance adjustment for car6-trb1, should now be more competitive (Wolf-Dieter, Bernhard).
+- Performance adjustment for car6-trb1, should now be more competitive (Wolf-Dieter,
+  Bernhard).
+- Tire change time can now be configured as parameter "all tires change time", the default
+  is 16 seconds (Bernhard).
 
 
 12. TODO/Notes
