--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -240,13 +240,14 @@ Changes since 1.3.7
   Bernhard).
 - Tire change time can now be configured as parameter "all tires change time", the default
   is 16 seconds (Bernhard).
-
+- Added track internal name field to TRB for XML generation (Bernhard).
 
 12. TODO/Notes
 --------------
 
 TODO for 1.3.8 "worn & blown"
 --------------
+- Race XML generation
 - Brake balance adjustable during ride
 - Curb sound
 - Dynamic track
@@ -327,7 +328,6 @@ TODO for 1.4.x
 TODO TRB
 --------
 - RSS feed(s) (suggested by Quinten)
-- Race XML generation
 - Content exchange
 - E-Mail exchange
 
