--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -243,7 +243,8 @@ Changes since 1.3.7
 - Added track internal name field to TRB for XML generation (Bernhard).
 - TRB adoptions, selecting driver optionally by name (previously only by index), added
   configuration option for "skill level default" in the "Drivers" section (Bernhard).
-- Added initial race configuration generator for TRB (Bernhard).
+- Added race configuration generator for TRB (Bernhard).
+- Integrated race configuration generator into TRB race submission page (Bernhard).
   
 
 12. TODO/Notes
@@ -251,12 +252,11 @@ Changes since 1.3.7
 
 TODO for 1.3.8 "worn & blown"
 --------------
-- Race XML generation
+- Car adjustments (tire wear, performance balance)
 - Brake balance adjustable during ride
 - Curb sound
 - Dynamic track
 - Wind/Temp
-- Car adjustments (tire wear, performance balance)
 
 TODO for 1.3.9 "analysed"
 --------------
