--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -231,7 +231,7 @@ Changes since 1.3.7
 - Made tire temperature/wear model data available for robots (Bernhard).
 - Added tire temperature/wear temperature model data to dashboard (Bernhard).
 - Added tire temperature/wear configuration parameter, "tire factor", see practice.xml as
-  example. If the factor is 0, the temperature/wheel model gets disabled (Bernhard).
+  example. If the factor is 0, the temperature/wear model gets disabled (Bernhard).
 - Just enable tire temperature/wear in pro mode (Bernhard).
 - Added new track created by Andrew Sumner, Hidden Valley (Andrew, Bernhard).
 - Added field to tPitCmd struct to control tire change (Bernhard).
@@ -245,6 +245,7 @@ Changes since 1.3.7
   configuration option for "skill level default" in the "Drivers" section (Bernhard).
 - Added race configuration generator for TRB (Bernhard).
 - Integrated race configuration generator into TRB race submission page (Bernhard).
+- Updated Windows installer for 1.3.8-test1 (Bernhard).
   
 
 12. TODO/Notes
