--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -254,6 +254,7 @@ Changes since 1.3.7
 TODO for 1.3.8 "worn & blown"
 --------------
 - Car adjustments (tire wear, performance balance)
+- Improve ranking with penalties if cars are not taken out of the race because of damage (e.g. out of fuel).
 - Brake balance adjustable during ride
 - Curb sound
 - Dynamic track
